[package]
name = "jco"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "self-build"
path = "bin/self_build.rs"

[dependencies]
anyhow = { workspace = true }
js-component-bindgen = { path = "./crates/js-component-bindgen" }
wit-component = { workspace = true }

[build-dependencies]
anyhow = "1.0.71"
js-component-bindgen = { path = "./crates/js-component-bindgen" }
wit-component = { workspace = true }

[workspace]
members = ["crates/js-component-bindgen", "crates/js-component-bindgen-component", "crates/wasm-tools-component"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
heck =  { version = "0.4", features = ["unicode"] }
indexmap = "2.0"
wasm-encoder = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
wasm-metadata = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
wasmparser = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
wasmprinter = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
wasmtime-environ = { path = "../wasmtime/crates/environ", features = ["component-model"] }
wat = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
wit-bindgen = { git = "https://github.com/macovedj/wit-bindgen", branch = "bundle" }
wit-component = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle", features = ['dummy-module']}
wit-parser = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
